--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.7",
     "prisma": "^5.20.0"
+  },
+  "dependencies": {
+    "express-validator": "^7.2.0"
   }
 }
